FIX team image, align

--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -158,6 +158,7 @@ a.about-btn:after {
 
 .team-img {
     margin-top: 20px;
+    width: 50pc;
 }
 
 /* FOOTER */ 
